<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ndridm.mylearn.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ndridm.mylearn.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ndridm.mylearn.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_quote"
        android:name="com.ndridm.mylearn.QuoteActivity"
        android:label="@string/menu_quote"
        tools:layout="@layout/activity_quote" />

    <activity
        android:id="@+id/nav_subway"
        android:name="com.ndridm.mylearn.SubwayActivity"
        android:label="@string/menu_subway"
        tools:layout="@layout/activity_subway" />

    <activity
        android:id="@+id/nav_case"
        android:name="com.ndridm.mylearn.CaseActivity"
        android:label="@string/menu_case"
        tools:layout="@layout/activity_case" />

</navigation>